Improved error handling and fixed swagger doc.
