# pkg/interface/http/model/error.go
@@ -1,0 +1,10 @@
+package model
+
+type ErrorResponse struct {
+	Error ErrorDescriptor `json:"error"`
+}
+
+type ErrorDescriptor struct {
+	Code    string `json:"code"`
+	Message string `json:"message"`
+}
